<resources>

    <string name="app_name">Online Job Portal</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_IN">SIGN IN</string>
    <string name="Job_Seeker">  Job Seeker</string>
    <string name="Employer">  Job Provider   </string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="check_box">Remember</string>
    <string name="delete_Profile">Delete Profile</string>
    <string name="signup_page">SignUp</string>
    <string name="update_page">Update Profile </string>
    <string name="view_page">Your Profile Details</string>




    <!--    <string name="app_name">ONLINE JOB PORTAL</string>-->
    <string name="postJob">Post Job</string>
    <string name="dashboard">Dashboard</string>
    <string name="job_details">Job Details</string>
    <string name="edit_details">Edit Details</string>
    <string name="title">Job Title</string>
    <string name="category">Category</string>
    <string name="salary">Salary</string>
    <string name="qualifications">Qualifications</string>
    <string name="description">Description</string>
    <string name="contactDetails">Contact Details</string>
    <string name="post">Post</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <!--    <string name="delete">Delete</string>-->
    <string name="notifications">Notifications</string>
    <string name="postNewJob">Post a new job</string>
    <!--    <string name="view">View Jobs</string>-->
    <string name="newjob">Apply A New Job</string>
    <string name="apply">Apply</string>
    <string name="name">Enter Name :</string>
    <string name="jobid">Job Id :</string>
    <string name="educate">Qualifications :</string>
    <string name="age">Age :</string>
    <string name="applyjob">Veiw Applied Jobs</string>
    <string name="address">Address :</string>
    <string name="phone">Contact Number :</string>
    <string name="email">Email :</string>

</resources>