<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivityJS">

    <TextView
        android:id="@+id/textView"
        android:layout_width="357dp"
        android:layout_height="wrap_content"
        android:text="Apply Job"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="36dp" />

    <EditText
        android:id="@+id/code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="70dp"
        android:inputType="textPersonName"
        android:hint="@string/jobid"
        android:textStyle="bold"
        android:textSize="24dp"/>

    <EditText
        android:id="@+id/uname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="130dp"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:textStyle="bold"
        android:textSize="24dp"/>

    <EditText
        android:id="@+id/educate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="190dp"
        android:inputType="textPersonName"
        android:textSize="24dp"
        android:textStyle="bold"
        android:hint="@string/educate" />

    <EditText
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="260dp"
        android:inputType="textPersonName"
        android:textSize="24dp"
        android:textStyle="bold"
        android:hint="@string/age" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="470dp"
        android:inputType="textPersonName"
        android:drawableLeft="@drawable/baseline_phone_24"
        android:textSize="24dp"
        android:textStyle="bold"
        android:hint="@string/phone" />

    <EditText
        android:id="@+id/address"
        android:layout_width="401dp"
        android:layout_height="65dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="330dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/address"
        android:inputType="textMultiLine"
        android:textStyle="bold"
        android:textSize="24dp" />

    <Button
        android:id="@+id/apply"
        android:layout_width="386dp"
        android:layout_height="67dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="540dp"
        android:backgroundTint="@color/apply"
        android:text="@string/apply"
        android:textSize="26dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="61dp"
        android:layout_height="63dp"
        android:layout_marginLeft="350dp"
        android:layout_marginTop="2dp"
        app:srcCompat="@drawable/logoo" />

    <EditText
        android:id="@+id/email"
        android:layout_width="398dp"
        android:layout_height="65dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="400dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/email"
        android:textStyle="bold"
        android:inputType="textMultiLine"
        android:textSize="24dp" />


</RelativeLayout>